# DISCAT

./: CMakeLists.txt
core/: BinManager.cxx  BinManager.h  DISCAT.cxx  DISCAT.h  DISCATMath.cxx  DISCATMath.h  DVCSEventGen.cxx  DVCSEventGen.h  DVCSplotter.cxx  DVCSplotter.h  DataConverter.cxx  DataConverter.h  FastMCModel.cxx  FastMCModel.h  InputHandler.cxx  InputHandler.h  mcp_glue.cxx  paths_AI_model.txt
examples/: RunDVCSmodel.cpp  main.cpp
scripts/: build_macparticles.sh
